--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-  <title>冯新宇的主页</title>
-  <head>Hello world</head>
+  <head>
+    <title>冯新宇的主页</title>
+    Hello world
+  </head>
+  <body>
   <h1>hello fxy</h1>
+  </body>
 </html>
