给标题来个居中吧~
奥利给~

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-    <h1>Hello everybody</h1>
+    <h1 align="center">Hello everybody</h1>
     <h2>开启养老群的故事</h2>
   </body>
 
