--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1 align="center">Hello everybody</h1>
     <h2>开启养老群的故事</h2>
-    <a href="https://www.baidu.com" target="_blank">ddd</a>
+    <a href="https://www.baidu.com" target="_blank">dddsss</a>
   </body>
 
 </html>
