添加看书书图片

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1 align="center">Hello everybody</h1>
     <h2>开启养老群的故事</h2>
     <a href="https://www.baidu.com" target="_blank">百度</a>
+    <img src="https://github.com/1051948124/1051948124.github.io/blob/main/read_book.jpg?raw=true" alt="看书书">
   </body>
 
 </html>
