--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <h2>开启养老群的故事</h2>
     <a href="https://www.baidu.com" target="_blank">百度</a>
     <img src="https://github.com/1051948124/1051948124.github.io/blob/main/read_book.jpg?raw=true" alt="看书书">
+
+    <h1>摸鱼神器</h1>
+    <a href="https://fakeupdate.net/" target="_blank">fakeupdate</a>
   </body>
 
 </html>
