--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <h1>摸鱼神器</h1>
     <a href="https://fakeupdate.net/" target="_blank">fakeupdate</a>
+    <a href="https://www.taobao.com" target="_blank">淘宝</a>
   </body>
 
 </html>
