--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
     <h1>摸鱼神器</h1>
     <a href="https://fakeupdate.net/" target="_blank">fakeupdate</a>
+
+    <h1>想剁手，欢迎点击下面链接</h1>
     <a href="https://www.taobao.com" target="_blank">淘宝</a>
+    <a href="https://www.jd.com/?country=china" target="_blank">京东</a>
   </body>
 
 </html>
