--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <h1>想剁手，欢迎点击下面链接</h1>
     <a href="https://www.taobao.com" target="_blank">淘宝</a>
+    <a href="https://www.tmall.com/" target="_blank">天猫</a>
     <a href="https://www.jd.com/?country=china" target="_blank">京东</a>
   </body>
 
