--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <a href="https://www.taobao.com" target="_blank">淘宝</a>
     <a href="https://www.tmall.com/" target="_blank">天猫</a>
     <a href="https://www.jd.com/?country=china" target="_blank">京东</a>
+
+    <h2>欢迎打赏</h2>
+    <img src="https://github.com/1051948124/1051948124.github.io/blob/main/fxy_collection_code.png?raw=true" alt="支付宝收款码">
   </body>
 
 </html>
