--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1 align="center">Hello everybody</h1>
     <h2>开启养老群的故事</h2>
     <a href="https://www.baidu.com" target="_blank">百度</a>
-    <img src="https://github.com/1051948124/1051948124.github.io/blob/main/read_book.jpg?raw=true" alt="看书书">
+    <img src="https://github.com/1051948124/1051948124.github.io/blob/main/images/read_book.jpg?raw=true" alt="看书书">
 
     <h2>摸鱼神器</h2>
     <a href="https://fakeupdate.net/" target="_blank">fakeupdate</a>
@@ -18,7 +18,7 @@
     <a href="https://www.jd.com/?country=china" target="_blank">京东</a>
 
     <h2>欢迎打赏</h2>
-    <img src="https://github.com/1051948124/1051948124.github.io/blob/main/fxy_collection_code.png?raw=true" alt="支付宝收款码">
+    <img src="https://github.com/1051948124/1051948124.github.io/blob/main/images/fxy_collection_code.png?raw=true" alt="支付宝收款码">
   </body>
 
 </html>
