添加css文件，修改html代码

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<html>
+<html lang="en" dir="ltr">
   <head>
+    <meta charset="utf-8">
     <title>冯新宇的主页</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
+    <div class="text">
+      Gradient Background Animation
+    </div>
+
     <h1 align="center">Hello everybody</h1>
     <h2>开启养老群的故事</h2>
     <a href="https://www.baidu.com" target="_blank">百度</a>
