个人主页中添加微信收款码

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <h2>欢迎打赏</h2>
     <img src="https://github.com/1051948124/1051948124.github.io/blob/main/images/fxy_collection_code.png?raw=true" alt="支付宝收款码">
+    <img src="https://github.com/1051948124/1051948124.github.io/blob/main/images/fxy_wechat_collection_code_xt.png?raw=true" alt="微信收款码">
   </body>
 
 </html>
