--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1 align="center">Hello everybody</h1>
     <h2>开启养老群的故事</h2>
     <a href="https://www.baidu.com" target="_blank">百度</a>
+    <a href="https://cn.bing.com/" target="_blank">Bing</a>
     <img src="https://github.com/1051948124/1051948124.github.io/blob/main/images/read_book.jpg?raw=true" alt="看书书">
 
     <h2>摸鱼神器</h2>
@@ -23,7 +24,7 @@
     <a href="https://www.tmall.com/" target="_blank">天猫</a>
     <a href="https://www.jd.com/?country=china" target="_blank">京东</a>
 
-    <h2>欢迎打赏</h2>
+    <h2>欢迎打钱</h2>
     <img src="https://github.com/1051948124/1051948124.github.io/blob/main/images/fxy_collection_code.png?raw=true" alt="支付宝收款码">
     <img src="https://github.com/1051948124/1051948124.github.io/blob/main/images/fxy_wechat_collection_code_xt.png?raw=true" alt="微信收款码">
   </body>
